--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#F2DC99</color>
+    <color name="colorPrimaryDark">#EEC824</color>
+    <color name="colorAccent">#A0DFDF</color>
+    <color name="colorExtra1">#6A961F</color>
+    <color name="colorExtra2">#92B473</color>
 </resources>
