--- a/app/src/main/res/layout/inner_first_child.xml
+++ b/app/src/main/res/layout/inner_first_child.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="현재 상태"
             android:textColor="#000000"
@@ -26,41 +26,42 @@
             android:id="@+id/useFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="42dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
+    <View style="@style/Divider" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="30dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_octninesecond"
-                android:text="연결된 기기"
-                android:textColor="#000000"
-                android:textSize="40dp" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/font_octninesecond"
+            android:text="연결된 기기"
+            android:textColor="#000000"
+            android:textSize="40dp" />
 
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/font_octninesecond"
-                android:text="연결된 기기 이름"
-                android:textColor="#9b9b9b"
-                android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/font_octninesecond"
+            android:text="연결된 기기 이름"
+            android:textColor="#9b9b9b"
+            android:textSize="20dp" />
 
-        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
