--- a/app/src/main/res/layout/inner_second_child.xml
+++ b/app/src/main/res/layout/inner_second_child.xml
@@ -8,14 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="볼륨"
             android:textColor="#000000"
@@ -23,25 +23,27 @@
 
         <SeekBar
             android:id="@+id/volume"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="65dp"
             android:layout_marginLeft="30dp"
-            android:outlineAmbientShadowColor="#ffffff"
-            android:outlineSpotShadowColor="#ffffff"/>
+            android:layout_marginRight="30dp"
+            android:outlineAmbientShadowColor="@color/colorExtra1"
+            android:outlineSpotShadowColor="@color/colorExtra2"/>
 
     </LinearLayout>
+    <View style="@style/Divider" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="읽기 속도"
             android:textColor="#000000"
@@ -51,32 +53,34 @@
             android:id="@+id/speed"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="230dp"
-            android:layout_marginTop="30dp" />
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="60dp" />
 
     </LinearLayout>
+    <View style="@style/Divider" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/font_octninesecond"
-        android:text="수신시 알림음 재생"
-        android:textColor="#000000"
-        android:textSize="35dp" />
+        android:orientation="horizontal">
 
-    <Switch
-        android:id="@+id/useFunction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="250dp"
-        android:layout_marginTop="10dp"
-        android:thumb="@drawable/switch_thumb"
-        android:track="@drawable/switch_track_selector" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/font_octninesecond"
+            android:text="알림음 재생"
+            android:textColor="#000000"
+            android:textSize="40dp" />
+
+        <Switch
+            android:id="@+id/useFunction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="42dp"
+            android:thumb="@drawable/switch_thumb"
+            android:track="@drawable/switch_track_selector" />
     </LinearLayout>
 </LinearLayout>
