--- a/app/src/main/res/layout/inner_third_child.xml
+++ b/app/src/main/res/layout/inner_third_child.xml
@@ -9,14 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="발신자"
             android:textColor="#000000"
@@ -26,61 +26,63 @@
             android:id="@+id/useFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="250dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="42dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
-
+    <View style="@style/Divider" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="발신 시간"
             android:textColor="#000000"
             android:textSize="40dp" />
 
         <Switch
-            android:id="@+id/useFunction2"
+            android:id="@+id/useFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="250dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="42dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
-
     </LinearLayout>
+    <View style="@style/Divider" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="50dp"
             android:fontFamily="@font/font_octninesecond"
             android:text="현재 상태"
             android:textColor="#000000"
             android:textSize="40dp" />
 
         <Switch
-            android:id="@+id/useFunction3"
+            android:id="@+id/useFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="42dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
+
 </LinearLayout>
