--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="speed">
-        <item>choose1</item>
-        <item>choose2</item>
+        <item>1.0</item>
+        <item>2.0</item>
     </string-array>
 </resources>
