--- a/app/src/main/res/layout/inner_first_child.xml
+++ b/app/src/main/res/layout/inner_first_child.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
             android:layout_marginTop="42dp"
+            android:switchMinWidth="85dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
