--- a/app/src/main/res/layout/inner_second_child.xml
+++ b/app/src/main/res/layout/inner_second_child.xml
@@ -78,8 +78,9 @@
             android:id="@+id/useFunction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginTop="42dp"
+            android:switchMinWidth="85dp"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
