텍스트 내용 설정 기능 완성, 종료버튼 하나도 안꾸미고 서비스 종료 용으로만 달아둠

--- a/app/src/main/res/layout/activity_main_2.xml
+++ b/app/src/main/res/layout/activity_main_2.xml
@@ -56,7 +56,7 @@
             android:textSize="100sp"
             app:colorBorder="@color/colorExtra1"
             app:colorOn="@color/colorExtra1"
-            app:on="false" />
+            app:on="true" />
     </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
@@ -115,6 +115,14 @@
                 app:expandable_spinner_size="40dp" />
 
             <View style="@style/Divider" />
+
+            <Button
+                android:id="@+id/finishBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="종료"
+                android:textSize="30dp"
+                android:fontFamily="@font/font_kopubmedium"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
