--- a/app/src/main/res/layout/inner_first_parent.xml
+++ b/app/src/main/res/layout/inner_first_parent.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_cover"
+    android:id="@+id/inner_first_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
     tools:ignore="UnusedAttribute">
 
     <TextView
-
+        android:id="@+id/inner_first_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
