--- a/app/src/main/res/drawable/switch_track_on.xml
+++ b/app/src/main/res/drawable/switch_track_on.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
@@ -6,7 +7,7 @@
         android:radius="15dp" />
 
     <size
-        android:width="200dp"
+        android:width="100dp"
         android:height="50dp" />
 
     <solid
