--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffff">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,17 +14,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:src="@mipmap/ic_launcher_foreground"
+            android:src="@mipmap/main"
             android:id="@+id/main_logo"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Hear Here"
-            android:fontFamily="@font/font_impact"
-            android:layout_below="@id/main_logo"
-            android:textSize="50dp"
-            android:textAlignment="center"/>
 
     </RelativeLayout>
 
