--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,304 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/colorPrimary"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="기능 사용"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="기능 사용하기"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/useFunction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="알림 안내 권한"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="권한 허용 여부"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/authority"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="블루투스 연결"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="현재 상태"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/condition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="연결된 기기"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-    </LinearLayout>
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="사운드 설정"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="볼륨"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <SeekBar
-            android:id="@+id/volume"
-            android:layout_width="198dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="읽기 속도"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Spinner
-            android:id="@+id/speed"
-            android:layout_width="93dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="알림 설정"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="수신 시 알림음 재생"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/playNotificationSound"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="재생 텍스트 내용 설정"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="발신자"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/playSender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="발신내용"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/playMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="41dp"
-        android:background="#50BCDF"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="발신시간"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-
-        <Switch
-            android:id="@+id/playTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#009999"
-        android:text="메시지 알림 내용 표시"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#50BCDF"
+        android:background="@color/colorAccent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/showText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="메시지 알림 내용이 표시됩니다."
-            android:scrollbars="vertical"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:fontFamily="@font/font_impact"
+                android:text="Hear Here"
+                android:textColor="#201D1D"
+                android:textSize="40sp" />
+
+            <ImageView
+                android:layout_width="37dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:src="@mipmap/ear" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center|right|top"
+                android:paddingRight="@dimen/com_kakao_padding"
+                android:paddingTop="@dimen/com_kakao_padding">
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:layout_width="102dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/kakao_lg"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <com.github.angads25.toggle.widget.LabeledSwitch
+            android:id="@+id/onoffswitch"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_margin="20dp"
+            android:textSize="100sp"
+            app:colorBorder="@color/colorExtra1"
+            app:colorOn="@color/colorExtra1"
+            app:on="true" />
     </LinearLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/ScrollView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            android:orientation="vertical">
+
+            <View style="@style/Divider" />
+
+            <com.skydoves.expandablelayout.ExpandableLayout
+                android:id="@+id/expandable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:expandable_animation="bounce"
+                app:expandable_duration="300"
+                app:expandable_isExpanded="false"
+                app:expandable_parentLayout="@layout/inner_first_parent"
+                app:expandable_secondLayout="@layout/inner_first_child"
+                app:expandable_spinner="@drawable/ic_expand_more"
+                app:expandable_spinner_color="@color/colorPrimaryDark"
+                app:expandable_spinner_size="40dp" />
+
+            <View style="@style/Divider" />
+
+            <com.skydoves.expandablelayout.ExpandableLayout
+                android:id="@+id/expandable1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:expandable_animation="bounce"
+                app:expandable_duration="200"
+                app:expandable_isExpanded="false"
+                app:expandable_parentLayout="@layout/inner_second_parent"
+                app:expandable_secondLayout="@layout/inner_second_child"
+                app:expandable_spinner="@drawable/ic_expand_more"
+                app:expandable_spinner_color="@color/colorPrimaryDark"
+                app:expandable_spinner_size="40dp" />
+
+            <View style="@style/Divider" />
+
+            <com.skydoves.expandablelayout.ExpandableLayout
+                android:id="@+id/expandable2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:expandable_duration="200"
+                app:expandable_isExpanded="false"
+                app:expandable_parentLayout="@layout/inner_third_parent"
+                app:expandable_secondLayout="@layout/inner_third_child"
+                app:expandable_spinner="@drawable/ic_expand_more"
+                app:expandable_spinner_color="@color/colorPrimaryDark"
+                app:expandable_spinner_size="40dp" />
+
+            <View style="@style/Divider" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
