--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_width="37dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
-                android:src="@mipmap/ear" />
+                android:src="@drawable/ear" />
 
             <LinearLayout
                 android:layout_width="match_parent"
