--- a/app/src/main/res/layout/inner_second_child.xml
+++ b/app/src/main/res/layout/inner_second_child.xml
@@ -84,4 +84,31 @@
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track_selector" />
     </LinearLayout>
+    <View style="@style/Divider" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="50dp"
+            android:fontFamily="@font/font_octninesecond"
+            android:text="진동 알림"
+            android:textColor="#000000"
+            android:textSize="40dp" />
+
+        <Switch
+            android:id="@+id/vibNoti"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="88dp"
+            android:layout_marginTop="42dp"
+            android:switchMinWidth="85dp"
+            android:thumb="@drawable/switch_thumb"
+            android:track="@drawable/switch_track_selector" />
+    </LinearLayout>
 </LinearLayout>
