--- a/app/src/main/res/layout/inner_first_child.xml
+++ b/app/src/main/res/layout/inner_first_child.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="42dp"
             android:switchMinWidth="85dp"
             android:thumb="@drawable/switch_thumb"
-            android:checked="true"
+            android:checked="false"
             android:track="@drawable/switch_track_selector" />
 
     </LinearLayout>
