--- a/app/src/main/res/layout/inner_first_child.xml
+++ b/app/src/main/res/layout/inner_first_child.xml
@@ -23,7 +23,7 @@
             android:textSize="40dp" />
 
         <Switch
-            android:id="@+id/useFunction"
+            android:id="@+id/bluetooth_connect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="80dp"
